--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Awesome</title>
     </head>
     <body>
-        <div class="header">
+        <div class="banner">
             <div class="nav">
-                <a href="">Header Logo</a>
+                <a class="logo" href="">Header Logo</a>
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
                 </ul>
             </div>
-            <div class="banner">
-                <div class="hero">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button>Sign up</button>
-                    <img src="" alt="placeholder">
+            <div class="hero-box">
+                <div class="hero-container">
+                    <div class="hero">
+                        <h1>This website is awesome</h1>
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                        <button>Sign up</button>
+                    </div>
+                    <img src="images/wassup.png" alt="placeholder">
                 </div>
             </div>
         </div>
