Add styling to random info (section 2)

--- a/index.html
+++ b/index.html
@@ -24,35 +24,37 @@
                         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                         <button>Sign up</button>
                     </div>
-                    <img src="images/wassup.png" alt="placeholder">
+                    <img src="images/wassup.png" alt="wassup">
                 </div>
             </div>
         </div>
         <div class="content">
             <div class="section-1">
                 <h2 class="subject">Some ramdom information</h2>
-                <div class="info">
-                    <div class="card"></div>
-                    <div class="description">
-                        this is some subtext under an illustration of image
+                <div class="info-container">
+                    <div class="info">
+                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                        <div class="description">
+                            this is some subtext under an illustration of image
+                        </div>
                     </div>
-                </div>
-                <div class="info">
-                    <div class="card"></div>
-                    <div class="description">
-                        this is some subtext under an illustration of image
+                    <div class="info">
+                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                        <div class="description">
+                            this is some subtext under an illustration of image
+                        </div>
                     </div>
-                </div>
-                <div class="info">
-                    <div class="card"></div>
-                    <div class="description">
-                        this is some subtext under an illustration of image
+                    <div class="info">
+                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                        <div class="description">
+                            this is some subtext under an illustration of image
+                        </div>
                     </div>
-                </div>
-                <div class="info">
-                    <div class="card"></div>
-                    <div class="description">
-                        this is some subtext under an illustration of image
+                    <div class="info">
+                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                        <div class="description">
+                            this is some subtext under an illustration of image
+                        </div>
                     </div>
                 </div>
             </div>
