--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="message">
                         This is an inpiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
                     </div>
-                    <h3 class="thor">Thor, God of Thunder</h3>
+                    <h3 class="thor">- Thor, God of Thunder</h3>
                 </div>
             </div>
             <div class="section-3">
@@ -72,7 +72,7 @@
                         <h3>Call to action! It's time</h3>
                         Sign up for our product by clicking that button right over there!
                     </div>
-                    <button></button>
+                    <button>Sign up</button>
                 </div>
             </div>
         </div>
