--- a/index.html
+++ b/index.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Awesome</title>
-    </head>
-    <body>
-        <div class="banner">
-            <div class="nav">
-                <a class="logo" href="">Header Logo</a>
-                <ul>
-                    <li><a href="">header link one</a></li>
-                    <li><a href="">header link two</a></li>
-                    <li><a href="">header link three</a></li>
-                </ul>
-            </div>
-            <div class="hero-box">
-                <div class="hero-container">
-                    <div class="hero">
-                        <h1>This website is awesome</h1>
-                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                        <button>Sign up</button>
-                    </div>
-                    <img src="images/wassup.png" alt="wassup">
-                </div>
-            </div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Awesome</title>
+</head>
+
+<body>
+    <div class="banner">
+        <div class="nav">
+            <a class="logo" href="">Header Logo</a>
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
         </div>
-        <div class="content">
-            <div class="section-1">
-                <h2 class="subject">Some ramdom information</h2>
-                <div class="info-container">
-                    <div class="info">
-                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
-                        <div class="description">
-                            this is some subtext under an illustration of image
-                        </div>
-                    </div>
-                    <div class="info">
-                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
-                        <div class="description">
-                            this is some subtext under an illustration of image
-                        </div>
-                    </div>
-                    <div class="info">
-                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
-                        <div class="description">
-                            this is some subtext under an illustration of image
-                        </div>
-                    </div>
-                    <div class="info">
-                        <div class="card"><img src="images/wassup.png" alt="wassup"></div>
-                        <div class="description">
-                            this is some subtext under an illustration of image
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section-2">
-                <div class="quote">
-                    <div class="message">
-                        This is an inpiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-                    </div>
-                    <h3 class="thor">- Thor, God of Thunder</h3>
-                </div>
-            </div>
-            <div class="section-3">
-                <div class="call">
-                    <div class="calling">
-                        <h3>Call to action! It's time</h3>
-                        Sign up for our product by clicking that button right over there!
-                    </div>
+        <div class="hero-box">
+            <div class="hero-container">
+                <div class="hero">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
+                        color is lower contrast</p>
                     <button>Sign up</button>
                 </div>
+                <img src="images/wassup.png" alt="wassup">
             </div>
         </div>
-        <div class="footer">
-            kolechr
+    </div>
+    <div class="content">
+        <div class="section-1">
+            <h2 class="subject">Some random information</h2>
+            <div class="info-container">
+                <div class="info">
+                    <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                    <div class="description">
+                        this is some subtext under an illustration of image
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                    <div class="description">
+                        this is some subtext under an illustration of image
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                    <div class="description">
+                        this is some subtext under an illustration of image
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="card"><img src="images/wassup.png" alt="wassup"></div>
+                    <div class="description">
+                        this is some subtext under an illustration of image
+                    </div>
+                </div>
+            </div>
         </div>
-    </body>
+        <div class="section-2">
+            <div class="quote">
+                <div class="message">
+                    This is an inpiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that it looks nice.
+                </div>
+                <h3 class="thor">- Thor, God of Thunder</h3>
+            </div>
+        </div>
+        <div class="section-3">
+            <div class="call">
+                <div class="calling">
+                    <h3>Call to action! It's time</h3>
+                    Sign up for our product by clicking that button right over there!
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        kolechr
+    </div>
+</body>
+
 </html>
